test/cases/bad/bad041.lat
// Not callable

class A {
    int x;
}

int main() {
    new A.x(3);

    return 0;
}